[gd_scene load_steps=30 format=4 uid="uid://c53s5rx64lyog"]

[ext_resource type="Script" uid="uid://ddllskycy03ju" path="res://scripts/level_1.gd" id="1_oijhk"]
[ext_resource type="Texture2D" uid="uid://bucbo56r0tl1a" path="res://assets/Textures/Sky/SkyBox.png" id="2_x1edx"]
[ext_resource type="Texture2D" uid="uid://bq22aq27copwo" path="res://assets/Textures/tilemaps/Grass_bottom.png" id="3_ngm3g"]
[ext_resource type="Texture2D" uid="uid://bmsp3cd4vi47w" path="res://assets/Textures/tilemaps/Grass_side.png" id="4_6c30s"]
[ext_resource type="Texture2D" uid="uid://c43xp527uowsx" path="res://assets/Textures/tilemaps/Grass_top.png" id="5_65l2r"]
[ext_resource type="Texture2D" uid="uid://d4i8ahsx28vhp" path="res://assets/Textures/tilemaps/Log_side.png" id="6_y0x4d"]
[ext_resource type="Texture2D" uid="uid://2aqjqp6yqq2k" path="res://assets/Textures/tilemaps/Log_top.png" id="7_kjt3o"]
[ext_resource type="Texture2D" uid="uid://cbcc5myi22ojy" path="res://assets/Textures/tilemaps/black.png" id="8_alb8b"]
[ext_resource type="Script" uid="uid://b30pya7anqq56" path="res://scripts/show_layer_0_tutorial1.gd" id="9_qgklu"]
[ext_resource type="PackedScene" uid="uid://ceu82e7wlgqss" path="res://scenes/killzone.tscn" id="10_piifc"]
[ext_resource type="PackedScene" uid="uid://co2yj2rfooo2m" path="res://scenes/player.tscn" id="11_0kwc4"]
[ext_resource type="FontFile" uid="uid://bsfa8tx5aqdke" path="res://assets/GamesaTestFont.ttf" id="12_1j8t4"]
[ext_resource type="PackedScene" uid="uid://mkc2k07wj2sw" path="res://scenes/MainMenuMusic.tscn" id="13_wig0r"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gjp17"]
texture = ExtResource("3_ngm3g")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rdrl3"]
texture = ExtResource("4_6c30s")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ga5nr"]
texture = ExtResource("5_65l2r")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mh3wm"]
texture = ExtResource("6_y0x4d")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8wo7y"]
texture = ExtResource("7_kjt3o")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mwtxr"]
texture = ExtResource("8_alb8b")

[sub_resource type="TileSet" id="TileSet_yl46k"]
sources/1 = SubResource("TileSetAtlasSource_gjp17")
sources/2 = SubResource("TileSetAtlasSource_rdrl3")
sources/3 = SubResource("TileSetAtlasSource_ga5nr")
sources/4 = SubResource("TileSetAtlasSource_mh3wm")
sources/5 = SubResource("TileSetAtlasSource_8wo7y")
sources/6 = SubResource("TileSetAtlasSource_mwtxr")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rdrl3"]
size = Vector2(48, 64)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y2tu7"]
texture = ExtResource("3_ngm3g")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o8is0"]
texture = ExtResource("4_6c30s")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_scmul"]
texture = ExtResource("5_65l2r")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k2xxl"]
texture = ExtResource("6_y0x4d")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_45aja"]
texture = ExtResource("7_kjt3o")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_o8is0"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 7
sources/1 = SubResource("TileSetAtlasSource_y2tu7")
sources/2 = SubResource("TileSetAtlasSource_o8is0")
sources/3 = SubResource("TileSetAtlasSource_scmul")
sources/4 = SubResource("TileSetAtlasSource_k2xxl")
sources/5 = SubResource("TileSetAtlasSource_45aja")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_xplbd"]
distance = -160.0

[sub_resource type="LabelSettings" id="LabelSettings_w2atp"]
font = ExtResource("12_1j8t4")
font_size = 60
font_color = Color(1, 0, 0, 1)
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_oijhk")

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(1024, 0)
repeat_times = 10000

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
position = Vector2(0, -96)
texture = ExtResource("2_x1edx")

[node name="Layer2" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAANAPP/BAAAAAAAAAANAPT/BAAAAAAAAAANAPX/BAAAAAAAAAANAPb/BAAAAAAAAAANAPf/BAAAAAAAAAANAPj/BAAAAAAAAAANAPn/BAAAAAAAAAANAPr/BAAAAAAAAAANAPv/BAAAAAAAAAAOAPP/BAAAAAAAAAAOAPT/BAAAAAAAAAAOAPX/BAAAAAAAAAAOAPb/BAAAAAAAAAAOAPf/BAAAAAAAAAAOAPj/BAAAAAAAAAAOAPn/BAAAAAAAAAAOAPr/BAAAAAAAAAAOAPv/BAAAAAAAAAAPAPP/BAAAAAAAAAAPAPT/BAAAAAAAAAAPAPX/BAAAAAAAAAAPAPb/BAAAAAAAAAAPAPf/BAAAAAAAAAAPAPj/BAAAAAAAAAAPAPn/BAAAAAAAAAAPAPr/BAAAAAAAAAAPAPv/BAAAAAAAAAAQAPP/BAAAAAAAAAAQAPT/BAAAAAAAAAAQAPX/BAAAAAAAAAAQAPb/BAAAAAAAAAAQAPf/BAAAAAAAAAAQAPj/BAAAAAAAAAAQAPn/BAAAAAAAAAAQAPr/BAAAAAAAAAAQAPv/BAAAAAAAAAARAPP/BAAAAAAAAAARAPT/BAAAAAAAAAARAPX/BAAAAAAAAAARAPb/BAAAAAAAAAARAPf/BAAAAAAAAAARAPj/BAAAAAAAAAARAPn/BAAAAAAAAAARAPr/BAAAAAAAAAARAPv/BAAAAAAAAAAOAPL/BAAAAAAAAAAPAPL/BAAAAAAAAAAQAPL/BAAAAAAAAAARAPL/BAAAAAAAAAAOAOH/BAAAAAAAAAAOAOL/BAAAAAAAAAAOAOP/BAAAAAAAAAAOAOT/BAAAAAAAAAAOAOX/BAAAAAAAAAAOAOb/BAAAAAAAAAAOAOf/BAAAAAAAAAAOAOj/BAAAAAAAAAAOAOn/BAAAAAAAAAAOAOr/BAAAAAAAAAAOAOv/BAAAAAAAAAAOAOz/BAAAAAAAAAAOAO3/BAAAAAAAAAAOAO7/BAAAAAAAAAAOAO//BAAAAAAAAAAOAPD/BAAAAAAAAAAOAPH/BAAAAAAAAAAPAOH/BAAAAAAAAAAPAOL/BAAAAAAAAAAPAOP/BAAAAAAAAAAPAOT/BAAAAAAAAAAPAOX/BAAAAAAAAAAPAOb/BAAAAAAAAAAPAOf/BAAAAAAAAAAPAOj/BAAAAAAAAAAPAOn/BAAAAAAAAAAPAOr/BAAAAAAAAAAPAOv/BAAAAAAAAAAPAOz/BAAAAAAAAAAPAO3/BAAAAAAAAAAPAO7/BAAAAAAAAAAPAO//BAAAAAAAAAAPAPD/BAAAAAAAAAAPAPH/BAAAAAAAAAAQAOH/BAAAAAAAAAAQAOL/BAAAAAAAAAAQAOP/BAAAAAAAAAAQAOT/BAAAAAAAAAAQAOX/BAAAAAAAAAAQAOb/BAAAAAAAAAAQAOf/BAAAAAAAAAAQAOj/BAAAAAAAAAAQAOn/BAAAAAAAAAAQAOr/BAAAAAAAAAAQAOv/BAAAAAAAAAAQAOz/BAAAAAAAAAAQAO3/BAAAAAAAAAAQAO7/BAAAAAAAAAAQAO//BAAAAAAAAAAQAPD/BAAAAAAAAAAQAPH/BAAAAAAAAAA=")
tile_set = SubResource("TileSet_yl46k")
rendering_quadrant_size = 8

[node name="TobikHutButton" type="Button" parent="."]
visible = false
offset_left = 224.0
offset_top = -128.0
offset_right = 272.0
offset_bottom = -64.0

[node name="show_layer0" type="Area2D" parent="."]
collision_layer = 8
script = ExtResource("9_qgklu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="show_layer0"]
position = Vector2(248, -96)
shape = SubResource("RectangleShape2D_rdrl3")

[node name="Layer1" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAD5////AQAAAAAAAAD6////AQAAAAAAAAD7////AQAAAAAAAAD8////AQAAAAAAAAD9////AQAAAAAAAAD+////AQAAAAAAAAD/////AQAAAAAAAAAAAP//AQAAAAAAAAABAP//AQAAAAAAAAACAP//AQAAAAAAAAADAP//AQAAAAAAAAAEAP//AQAAAAAAAAAFAP//AQAAAAAAAAAGAP//AQAAAAAAAAAHAP//AQAAAAAAAAAIAP//AQAAAAAAAAD5/wAAAQAAAAAAAAD6/wAAAQAAAAAAAAD7/wAAAQAAAAAAAAD8/wAAAQAAAAAAAAD9/wAAAQAAAAAAAAD+/wAAAQAAAAAAAAD//wAAAQAAAAAAAAAAAAAAAQAAAAAAAAABAAAAAQAAAAAAAAACAAAAAQAAAAAAAAADAAAAAQAAAAAAAAAEAAAAAQAAAAAAAAAFAAAAAQAAAAAAAAAGAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAAIAAAAAQAAAAAAAAD5/wEAAQAAAAAAAAD6/wEAAQAAAAAAAAD7/wEAAQAAAAAAAAD8/wEAAQAAAAAAAAD9/wEAAQAAAAAAAAD+/wEAAQAAAAAAAAD//wEAAQAAAAAAAAAAAAEAAQAAAAAAAAABAAEAAQAAAAAAAAACAAEAAQAAAAAAAAADAAEAAQAAAAAAAAAEAAEAAQAAAAAAAAAFAAEAAQAAAAAAAAAGAAEAAQAAAAAAAAAHAAEAAQAAAAAAAAAIAAEAAQAAAAAAAAD5/wIAAQAAAAAAAAD6/wIAAQAAAAAAAAD7/wIAAQAAAAAAAAD8/wIAAQAAAAAAAAD9/wIAAQAAAAAAAAD+/wIAAQAAAAAAAAD//wIAAQAAAAAAAAAAAAIAAQAAAAAAAAABAAIAAQAAAAAAAAACAAIAAQAAAAAAAAADAAIAAQAAAAAAAAAEAAIAAQAAAAAAAAAFAAIAAQAAAAAAAAAGAAIAAQAAAAAAAAAHAAIAAQAAAAAAAAAIAAIAAQAAAAAAAAD5/wMAAQAAAAAAAAD5/wQAAQAAAAAAAAD5/wUAAQAAAAAAAAD5/wYAAQAAAAAAAAD6/wMAAQAAAAAAAAD6/wQAAQAAAAAAAAD6/wUAAQAAAAAAAAD6/wYAAQAAAAAAAAD7/wMAAQAAAAAAAAD7/wQAAQAAAAAAAAD7/wUAAQAAAAAAAAD7/wYAAQAAAAAAAAD8/wMAAQAAAAAAAAD8/wQAAQAAAAAAAAD8/wUAAQAAAAAAAAD8/wYAAQAAAAAAAAD9/wMAAQAAAAAAAAD9/wQAAQAAAAAAAAD9/wUAAQAAAAAAAAD9/wYAAQAAAAAAAAD+/wMAAQAAAAAAAAD+/wQAAQAAAAAAAAD+/wUAAQAAAAAAAAD+/wYAAQAAAAAAAAD//wMAAQAAAAAAAAD//wQAAQAAAAAAAAD//wUAAQAAAAAAAAD//wYAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAAABAAMAAQAAAAAAAAABAAQAAQAAAAAAAAABAAUAAQAAAAAAAAABAAYAAQAAAAAAAAACAAMAAQAAAAAAAAACAAQAAQAAAAAAAAACAAUAAQAAAAAAAAACAAYAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQAAAAAAAAADAAUAAQAAAAAAAAADAAYAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAYAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAQAAQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAQAAQAAAAAAAAAGAAUAAQAAAAAAAAAGAAYAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAYAAQAAAAAAAAD5/wcAAQAAAAAAAAD5/wgAAQAAAAAAAAD5/wkAAQAAAAAAAAD6/wcAAQAAAAAAAAD6/wgAAQAAAAAAAAD6/wkAAQAAAAAAAAD7/wcAAQAAAAAAAAD7/wgAAQAAAAAAAAD7/wkAAQAAAAAAAAD8/wcAAQAAAAAAAAD8/wgAAQAAAAAAAAD8/wkAAQAAAAAAAAD9/wcAAQAAAAAAAAD9/wgAAQAAAAAAAAD9/wkAAQAAAAAAAAD+/wcAAQAAAAAAAAD+/wgAAQAAAAAAAAD+/wkAAQAAAAAAAAD//wcAAQAAAAAAAAD//wgAAQAAAAAAAAD//wkAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAgAAQAAAAAAAAAAAAkAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQAAAAAAAAABAAkAAQAAAAAAAAACAAcAAQAAAAAAAAACAAgAAQAAAAAAAAACAAkAAQAAAAAAAAADAAcAAQAAAAAAAAADAAgAAQAAAAAAAAADAAkAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAkAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAFAAkAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAgAAQAAAAAAAAAGAAkAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAgAAQAAAAAAAAAHAAkAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAgAAQAAAAAAAAAIAAkAAQAAAAAAAAD5//z/AgAAAAAAAAD5//3/AQAAAAAAAAD5//7/AQAAAAAAAAD6//z/AgAAAAAAAAD6//3/AQAAAAAAAAD6//7/AQAAAAAAAAD7//z/AgAAAAAAAAD7//3/AQAAAAAAAAD7//7/AQAAAAAAAAD8//z/AgAAAAAAAAD8//3/AQAAAAAAAAD8//7/AQAAAAAAAAD9//z/AgAAAAAAAAD9//3/AQAAAAAAAAD9//7/AQAAAAAAAAD+//z/AgAAAAAAAAD+//3/AQAAAAAAAAD+//7/AQAAAAAAAAD///z/AgAAAAAAAAD///3/AQAAAAAAAAD///7/AQAAAAAAAAAAAPz/AgAAAAAAAAAAAP3/AQAAAAAAAAAAAP7/AQAAAAAAAAABAPz/AgAAAAAAAAABAP3/AQAAAAAAAAABAP7/AQAAAAAAAAACAPz/AgAAAAAAAAACAP3/AQAAAAAAAAACAP7/AQAAAAAAAAADAPz/AgAAAAAAAAADAP3/AQAAAAAAAAADAP7/AQAAAAAAAAAEAPz/AgAAAAAAAAAEAP3/AQAAAAAAAAAEAP7/AQAAAAAAAAAFAPz/AgAAAAAAAAAFAP3/AQAAAAAAAAAFAP7/AQAAAAAAAAAGAPz/AgAAAAAAAAAGAP3/AQAAAAAAAAAGAP7/AQAAAAAAAAAHAPz/AgAAAAAAAAAHAP3/AQAAAAAAAAAHAP7/AQAAAAAAAAAIAPz/AgAAAAAAAAAIAP3/AQAAAAAAAAAIAP7/AQAAAAAAAAAJAP3/AQAAAAAAAAAJAP7/AQAAAAAAAAAJAP//AQAAAAAAAAAJAAAAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAAJAAgAAQAAAAAAAAAJAAkAAQAAAAAAAAAKAP3/AQAAAAAAAAAKAP7/AQAAAAAAAAAKAP//AQAAAAAAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAQAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAAcAAQAAAAAAAAAKAAgAAQAAAAAAAAAKAAkAAQAAAAAAAAALAP3/AQAAAAAAAAALAP7/AQAAAAAAAAALAP//AQAAAAAAAAALAAAAAQAAAAAAAAALAAEAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAALAAcAAQAAAAAAAAALAAgAAQAAAAAAAAALAAkAAQAAAAAAAAAMAP3/AQAAAAAAAAAMAP7/AQAAAAAAAAAMAP//AQAAAAAAAAAMAAAAAQAAAAAAAAAMAAEAAQAAAAAAAAAMAAIAAQAAAAAAAAAMAAMAAQAAAAAAAAAMAAQAAQAAAAAAAAAMAAUAAQAAAAAAAAAMAAYAAQAAAAAAAAAMAAcAAQAAAAAAAAAMAAgAAQAAAAAAAAAMAAkAAQAAAAAAAAANAP3/AQAAAAAAAAANAP7/AQAAAAAAAAANAP//AQAAAAAAAAANAAAAAQAAAAAAAAANAAEAAQAAAAAAAAANAAIAAQAAAAAAAAANAAMAAQAAAAAAAAANAAQAAQAAAAAAAAANAAUAAQAAAAAAAAANAAYAAQAAAAAAAAANAAcAAQAAAAAAAAANAAgAAQAAAAAAAAANAAkAAQAAAAAAAAAOAP3/AQAAAAAAAAAOAP7/AQAAAAAAAAAOAP//AQAAAAAAAAAOAAAAAQAAAAAAAAAOAAEAAQAAAAAAAAAOAAIAAQAAAAAAAAAOAAMAAQAAAAAAAAAOAAQAAQAAAAAAAAAOAAUAAQAAAAAAAAAOAAYAAQAAAAAAAAAOAAcAAQAAAAAAAAAOAAgAAQAAAAAAAAAOAAkAAQAAAAAAAAAPAP3/AQAAAAAAAAAPAP7/AQAAAAAAAAAPAP//AQAAAAAAAAAPAAAAAQAAAAAAAAAPAAEAAQAAAAAAAAAPAAIAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAQAAQAAAAAAAAAPAAUAAQAAAAAAAAAPAAYAAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAgAAQAAAAAAAAAPAAkAAQAAAAAAAAAQAP3/AQAAAAAAAAAQAP7/AQAAAAAAAAAQAP//AQAAAAAAAAAQAAAAAQAAAAAAAAAQAAEAAQAAAAAAAAAQAAIAAQAAAAAAAAAQAAMAAQAAAAAAAAAQAAQAAQAAAAAAAAAQAAUAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAcAAQAAAAAAAAAQAAgAAQAAAAAAAAAQAAkAAQAAAAAAAAARAP3/AQAAAAAAAAARAP7/AQAAAAAAAAARAP//AQAAAAAAAAARAAAAAQAAAAAAAAARAAEAAQAAAAAAAAARAAIAAQAAAAAAAAARAAMAAQAAAAAAAAARAAQAAQAAAAAAAAARAAUAAQAAAAAAAAARAAYAAQAAAAAAAAARAAcAAQAAAAAAAAARAAgAAQAAAAAAAAARAAkAAQAAAAAAAAASAP3/AQAAAAAAAAASAP7/AQAAAAAAAAASAP//AQAAAAAAAAASAAAAAQAAAAAAAAASAAEAAQAAAAAAAAASAAIAAQAAAAAAAAASAAMAAQAAAAAAAAASAAQAAQAAAAAAAAASAAUAAQAAAAAAAAASAAYAAQAAAAAAAAASAAcAAQAAAAAAAAASAAgAAQAAAAAAAAASAAkAAQAAAAAAAAATAP3/AQAAAAAAAAATAP7/AQAAAAAAAAATAP//AQAAAAAAAAATAAAAAQAAAAAAAAATAAEAAQAAAAAAAAATAAIAAQAAAAAAAAATAAMAAQAAAAAAAAATAAQAAQAAAAAAAAATAAUAAQAAAAAAAAATAAYAAQAAAAAAAAATAAcAAQAAAAAAAAATAAgAAQAAAAAAAAATAAkAAQAAAAAAAAAUAP3/AQAAAAAAAAAUAP7/AQAAAAAAAAAUAP//AQAAAAAAAAAUAAAAAQAAAAAAAAAUAAEAAQAAAAAAAAAUAAIAAQAAAAAAAAAUAAMAAQAAAAAAAAAUAAQAAQAAAAAAAAAUAAUAAQAAAAAAAAAUAAYAAQAAAAAAAAAUAAcAAQAAAAAAAAAUAAgAAQAAAAAAAAAUAAkAAQAAAAAAAAAVAP3/AQAAAAAAAAAVAP7/AQAAAAAAAAAVAP//AQAAAAAAAAAVAAAAAQAAAAAAAAAVAAEAAQAAAAAAAAAVAAIAAQAAAAAAAAAVAAMAAQAAAAAAAAAVAAQAAQAAAAAAAAAVAAUAAQAAAAAAAAAVAAYAAQAAAAAAAAAVAAcAAQAAAAAAAAAVAAgAAQAAAAAAAAAVAAkAAQAAAAAAAAAWAP3/AQAAAAAAAAAWAP7/AQAAAAAAAAAWAP//AQAAAAAAAAAWAAAAAQAAAAAAAAAWAAEAAQAAAAAAAAAWAAIAAQAAAAAAAAAWAAMAAQAAAAAAAAAWAAQAAQAAAAAAAAAWAAUAAQAAAAAAAAAWAAYAAQAAAAAAAAAWAAcAAQAAAAAAAAAWAAgAAQAAAAAAAAAWAAkAAQAAAAAAAAAXAP3/AQAAAAAAAAAXAP7/AQAAAAAAAAAXAP//AQAAAAAAAAAXAAAAAQAAAAAAAAAXAAEAAQAAAAAAAAAXAAIAAQAAAAAAAAAXAAMAAQAAAAAAAAAXAAQAAQAAAAAAAAAXAAUAAQAAAAAAAAAXAAYAAQAAAAAAAAAXAAcAAQAAAAAAAAAXAAgAAQAAAAAAAAAXAAkAAQAAAAAAAAAYAP3/AQAAAAAAAAAYAP7/AQAAAAAAAAAYAP//AQAAAAAAAAAYAAAAAQAAAAAAAAAYAAEAAQAAAAAAAAAYAAIAAQAAAAAAAAAYAAMAAQAAAAAAAAAYAAQAAQAAAAAAAAAYAAUAAQAAAAAAAAAYAAYAAQAAAAAAAAAYAAcAAQAAAAAAAAAYAAgAAQAAAAAAAAAYAAkAAQAAAAAAAAAZAP3/AQAAAAAAAAAZAP7/AQAAAAAAAAAZAP//AQAAAAAAAAAZAAAAAQAAAAAAAAAZAAEAAQAAAAAAAAAZAAIAAQAAAAAAAAAZAAMAAQAAAAAAAAAZAAQAAQAAAAAAAAAZAAUAAQAAAAAAAAAZAAYAAQAAAAAAAAAZAAcAAQAAAAAAAAAZAAgAAQAAAAAAAAAZAAkAAQAAAAAAAAAaAP3/AQAAAAAAAAAaAP7/AQAAAAAAAAAaAP//AQAAAAAAAAAaAAAAAQAAAAAAAAAaAAEAAQAAAAAAAAAaAAIAAQAAAAAAAAAaAAMAAQAAAAAAAAAaAAQAAQAAAAAAAAAaAAUAAQAAAAAAAAAaAAYAAQAAAAAAAAAaAAcAAQAAAAAAAAAaAAgAAQAAAAAAAAAaAAkAAQAAAAAAAAAbAP3/AQAAAAAAAAAbAP7/AQAAAAAAAAAbAP//AQAAAAAAAAAbAAAAAQAAAAAAAAAbAAEAAQAAAAAAAAAbAAIAAQAAAAAAAAAbAAMAAQAAAAAAAAAbAAQAAQAAAAAAAAAbAAUAAQAAAAAAAAAbAAYAAQAAAAAAAAAbAAcAAQAAAAAAAAAbAAgAAQAAAAAAAAAbAAkAAQAAAAAAAAAcAP3/AQAAAAAAAAAcAP7/AQAAAAAAAAAcAP//AQAAAAAAAAAcAAAAAQAAAAAAAAAcAAEAAQAAAAAAAAAcAAIAAQAAAAAAAAAcAAMAAQAAAAAAAAAcAAQAAQAAAAAAAAAcAAUAAQAAAAAAAAAcAAYAAQAAAAAAAAAcAAcAAQAAAAAAAAAcAAgAAQAAAAAAAAAcAAkAAQAAAAAAAAAdAP3/AQAAAAAAAAAdAP7/AQAAAAAAAAAdAP//AQAAAAAAAAAdAAAAAQAAAAAAAAAdAAEAAQAAAAAAAAAdAAIAAQAAAAAAAAAdAAMAAQAAAAAAAAAdAAQAAQAAAAAAAAAdAAUAAQAAAAAAAAAdAAYAAQAAAAAAAAAdAAcAAQAAAAAAAAAdAAgAAQAAAAAAAAAdAAkAAQAAAAAAAAAeAP3/AQAAAAAAAAAeAP7/AQAAAAAAAAAeAP//AQAAAAAAAAAeAAAAAQAAAAAAAAAeAAEAAQAAAAAAAAAeAAIAAQAAAAAAAAAeAAMAAQAAAAAAAAAeAAQAAQAAAAAAAAAeAAUAAQAAAAAAAAAeAAYAAQAAAAAAAAAeAAcAAQAAAAAAAAAeAAgAAQAAAAAAAAAeAAkAAQAAAAAAAAAfAP3/AQAAAAAAAAAfAP7/AQAAAAAAAAAfAP//AQAAAAAAAAAfAAAAAQAAAAAAAAAfAAEAAQAAAAAAAAAfAAIAAQAAAAAAAAAfAAMAAQAAAAAAAAAfAAQAAQAAAAAAAAAfAAUAAQAAAAAAAAAfAAYAAQAAAAAAAAAfAAcAAQAAAAAAAAAfAAgAAQAAAAAAAAAfAAkAAQAAAAAAAAAgAP3/AQAAAAAAAAAgAP7/AQAAAAAAAAAgAP//AQAAAAAAAAAgAAAAAQAAAAAAAAAgAAEAAQAAAAAAAAAgAAIAAQAAAAAAAAAgAAMAAQAAAAAAAAAgAAQAAQAAAAAAAAAgAAUAAQAAAAAAAAAgAAYAAQAAAAAAAAAgAAcAAQAAAAAAAAAgAAgAAQAAAAAAAAAgAAkAAQAAAAAAAAAhAP3/AQAAAAAAAAAhAP7/AQAAAAAAAAAhAP//AQAAAAAAAAAhAAAAAQAAAAAAAAAhAAEAAQAAAAAAAAAhAAIAAQAAAAAAAAAhAAMAAQAAAAAAAAAhAAQAAQAAAAAAAAAhAAUAAQAAAAAAAAAhAAYAAQAAAAAAAAAhAAcAAQAAAAAAAAAhAAgAAQAAAAAAAAAhAAkAAQAAAAAAAAAiAP3/AQAAAAAAAAAiAP7/AQAAAAAAAAAiAP//AQAAAAAAAAAiAAAAAQAAAAAAAAAiAAEAAQAAAAAAAAAiAAIAAQAAAAAAAAAiAAMAAQAAAAAAAAAiAAQAAQAAAAAAAAAiAAUAAQAAAAAAAAAiAAYAAQAAAAAAAAAiAAcAAQAAAAAAAAAiAAgAAQAAAAAAAAAiAAkAAQAAAAAAAAAjAP3/AQAAAAAAAAAjAP7/AQAAAAAAAAAjAP//AQAAAAAAAAAjAAAAAQAAAAAAAAAjAAEAAQAAAAAAAAAjAAIAAQAAAAAAAAAjAAMAAQAAAAAAAAAjAAQAAQAAAAAAAAAjAAUAAQAAAAAAAAAjAAYAAQAAAAAAAAAjAAcAAQAAAAAAAAAjAAgAAQAAAAAAAAAjAAkAAQAAAAAAAAAkAP3/AQAAAAAAAAAkAP7/AQAAAAAAAAAkAP//AQAAAAAAAAAkAAAAAQAAAAAAAAAkAAEAAQAAAAAAAAAkAAIAAQAAAAAAAAAkAAMAAQAAAAAAAAAkAAQAAQAAAAAAAAAkAAUAAQAAAAAAAAAkAAYAAQAAAAAAAAAkAAcAAQAAAAAAAAAkAAgAAQAAAAAAAAAkAAkAAQAAAAAAAAAlAP3/AQAAAAAAAAAlAP7/AQAAAAAAAAAlAP//AQAAAAAAAAAlAAAAAQAAAAAAAAAlAAEAAQAAAAAAAAAlAAIAAQAAAAAAAAAlAAMAAQAAAAAAAAAlAAQAAQAAAAAAAAAlAAUAAQAAAAAAAAAlAAYAAQAAAAAAAAAlAAcAAQAAAAAAAAAlAAgAAQAAAAAAAAAlAAkAAQAAAAAAAAAmAP3/AQAAAAAAAAAmAP7/AQAAAAAAAAAmAP//AQAAAAAAAAAmAAAAAQAAAAAAAAAmAAEAAQAAAAAAAAAmAAIAAQAAAAAAAAAmAAMAAQAAAAAAAAAmAAQAAQAAAAAAAAAmAAUAAQAAAAAAAAAmAAYAAQAAAAAAAAAmAAcAAQAAAAAAAAAmAAgAAQAAAAAAAAAmAAkAAQAAAAAAAAAnAP3/AQAAAAAAAAAnAP7/AQAAAAAAAAAnAP//AQAAAAAAAAAnAAAAAQAAAAAAAAAnAAEAAQAAAAAAAAAnAAIAAQAAAAAAAAAnAAMAAQAAAAAAAAAnAAQAAQAAAAAAAAAnAAUAAQAAAAAAAAAnAAYAAQAAAAAAAAAnAAcAAQAAAAAAAAAnAAgAAQAAAAAAAAAnAAkAAQAAAAAAAAAoAP3/AQAAAAAAAAAoAP7/AQAAAAAAAAAoAP//AQAAAAAAAAAoAAAAAQAAAAAAAAAoAAEAAQAAAAAAAAAoAAIAAQAAAAAAAAAoAAMAAQAAAAAAAAAoAAQAAQAAAAAAAAAoAAUAAQAAAAAAAAAoAAYAAQAAAAAAAAAoAAcAAQAAAAAAAAAoAAgAAQAAAAAAAAAoAAkAAQAAAAAAAAApAP3/AQAAAAAAAAApAP7/AQAAAAAAAAApAP//AQAAAAAAAAApAAAAAQAAAAAAAAApAAEAAQAAAAAAAAApAAIAAQAAAAAAAAApAAMAAQAAAAAAAAApAAQAAQAAAAAAAAApAAUAAQAAAAAAAAApAAYAAQAAAAAAAAApAAcAAQAAAAAAAAApAAgAAQAAAAAAAAApAAkAAQAAAAAAAAAqAP3/AQAAAAAAAAAqAP7/AQAAAAAAAAAqAP//AQAAAAAAAAAqAAAAAQAAAAAAAAAqAAEAAQAAAAAAAAAqAAIAAQAAAAAAAAAqAAMAAQAAAAAAAAAqAAQAAQAAAAAAAAAqAAUAAQAAAAAAAAAqAAYAAQAAAAAAAAAqAAcAAQAAAAAAAAAqAAgAAQAAAAAAAAAqAAkAAQAAAAAAAAArAP3/AQAAAAAAAAArAP7/AQAAAAAAAAArAP//AQAAAAAAAAArAAAAAQAAAAAAAAArAAEAAQAAAAAAAAArAAIAAQAAAAAAAAArAAMAAQAAAAAAAAArAAQAAQAAAAAAAAArAAUAAQAAAAAAAAArAAYAAQAAAAAAAAArAAcAAQAAAAAAAAArAAgAAQAAAAAAAAArAAkAAQAAAAAAAAAsAP3/AQAAAAAAAAAsAP7/AQAAAAAAAAAsAP//AQAAAAAAAAAsAAAAAQAAAAAAAAAsAAEAAQAAAAAAAAAsAAIAAQAAAAAAAAAsAAMAAQAAAAAAAAAsAAQAAQAAAAAAAAAsAAUAAQAAAAAAAAAsAAYAAQAAAAAAAAAsAAcAAQAAAAAAAAAsAAgAAQAAAAAAAAAsAAkAAQAAAAAAAAAtAP3/AQAAAAAAAAAtAP7/AQAAAAAAAAAtAP//AQAAAAAAAAAtAAAAAQAAAAAAAAAtAAEAAQAAAAAAAAAtAAIAAQAAAAAAAAAtAAMAAQAAAAAAAAAtAAQAAQAAAAAAAAAtAAUAAQAAAAAAAAAtAAYAAQAAAAAAAAAtAAcAAQAAAAAAAAAtAAgAAQAAAAAAAAAtAAkAAQAAAAAAAAAJAPz/AgAAAAAAAAAKAPz/AgAAAAAAAAALAPz/AgAAAAAAAAAMAPz/AgAAAAAAAAANAPz/AgAAAAAAAAAOAPz/AgAAAAAAAAAPAPz/AgAAAAAAAAAQAPz/AgAAAAAAAAARAPz/AgAAAAAAAAASAPz/AgAAAAAAAAATAPz/AgAAAAAAAAAUAPz/AgAAAAAAAAAVAPz/AgAAAAAAAAAWAPz/AgAAAAAAAAAXAPz/AgAAAAAAAAAYAPz/AgAAAAAAAAAZAPz/AgAAAAAAAAAaAPz/AgAAAAAAAAAbAPz/AgAAAAAAAAAcAPz/AgAAAAAAAAAdAPz/AgAAAAAAAAAeAPz/AgAAAAAAAAAfAPz/AgAAAAAAAAAgAPz/AgAAAAAAAAAhAPz/AgAAAAAAAAAiAPz/AgAAAAAAAAAjAPz/AgAAAAAAAAAkAPz/AgAAAAAAAAAlAPz/AgAAAAAAAAAmAPz/AgAAAAAAAAAnAPz/AgAAAAAAAAAoAPz/AgAAAAAAAAApAPz/AgAAAAAAAAAqAPz/AgAAAAAAAAArAPz/AgAAAAAAAAAsAPz/AgAAAAAAAAAtAPz/AgAAAAAAAAA=")
tile_set = SubResource("TileSet_o8is0")
rendering_quadrant_size = 8

[node name="Killzone" parent="." instance=ExtResource("10_piifc")]
position = Vector2(-2, 72)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Killzone"]
position = Vector2(2, -72)
shape = SubResource("WorldBoundaryShape2D_xplbd")

[node name="player" parent="." instance=ExtResource("11_0kwc4")]
process_priority = 100
position = Vector2(238, -64)

[node name="Camera2D2" type="Camera2D" parent="player"]
z_index = 100
position = Vector2(-2, 17)
offset = Vector2(0, -10)
zoom = Vector2(5, 5)
limit_bottom = 120
limit_smoothed = true

[node name="die_label" type="Label" parent="player/Camera2D2"]
process_priority = 10002
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -79.5
offset_top = -269.0
offset_right = 89.5
offset_bottom = -217.0
grow_horizontal = 2
grow_vertical = 2
text = "You died"
label_settings = SubResource("LabelSettings_w2atp")
metadata/_edit_use_anchors_ = true

[node name="die_blur" type="ColorRect" parent="player/Camera2D2/die_label"]
process_priority = 1001
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1419.0
offset_top = -1001.0
offset_right = 1414.0
offset_bottom = 1164.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.26, 0.26, 0.26, 0.6901961)
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer" parent="." instance=ExtResource("13_wig0r")]
autoplay = true
bus = &"Master"

[connection signal="pressed" from="TobikHutButton" to="show_layer0" method="_on_tobik_hut_button_pressed"]
[connection signal="body_entered" from="show_layer0" to="show_layer0" method="_on_body_entered"]
[connection signal="body_exited" from="show_layer0" to="show_layer0" method="_on_body_exited"]
